# Expense-Tracker

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
expense_bot/: __init__.py
expense_bot/app/: config.py  main.py
expense_bot/app/ai/: __init__.py  extractor.py  prompts.py  whisper.py
expense_bot/app/database/: models.py  repository.py  session.py
expense_bot/app/schemas/: transaction.py
expense_bot/app/services/: report_service.py  transaction_service.py
expense_bot/app/telegram/: bot.py  handlers.py
migrations/: env.py
migrations/versions/: 001_create_transactions_table.py
